# ShareSlices

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .mise.toml  AGENTS.md  CONTEXT.md  Cargo.toml  PRODUCT.md  README.md  compose.dev.yaml  compose.gallery-local.yaml  compose.yaml  cspell.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: release-cli.yml
.scratch/reuse-artifact-content-bundles/: PRD.md
.scratch/shareslices-cli-artifact-management/: PRD.md
.scratch/shareslices-skill-release/: PRD.md
api/: AGENTS.md  Dockerfile  package.json  tsconfig.json  vitest.config.ts
api/openapi/: openapi.yaml
api/src/: env.ts  main.ts
api/tests/: account-entry.yaml  account-routes.test.ts  account-verification-routes.test.ts  artifact-flow.yaml  artifact-intake.test.ts  artifact-management.test.ts  cli-auth.yaml  (+48 more)
cli/: AGENTS.md  Cargo.toml  README.md
cli/install/: install.ps1  install.sh
cli/npm/: README.md  package.json
cli/npm/scripts/: install.mjs
cli/schema/: agent-protocol-v1.schema.json
cli/schema/fixtures/: action-authorize.json  action-change-local-input.json  action-confirm-irreversible.json  action-contact-support.json  action-inspect-state.json  action-install-or-upgrade.json  action-resolve-ambiguity.json  action-retry-later.json  capabilities.json  outcome-action-required.json  outcome-cancelled.json  outcome-completed.json  outcome-failed.json  outcome-in-progress.json  outcome-indeterminate.json  outcome-partial.json
cli/src/: agent_protocol.rs  api_client.rs  artifact_commands.rs  auth_commands.rs  auth_continuation.rs  cli_runner.rs  command_line.rs  credential_store.rs  gallery_commands.rs  lib.rs  main.rs  model.rs  packaging.rs
cli/tests/: agent_protocol.rs  agent_protocol_schema.rs  artifact_commands.rs  artifact_process_contract.rs  auth_commands.rs  auth_continuation.rs  command_line.rs  gallery_commands.rs  gallery_models.rs  http_client.rs
docs/: README.md
skill/: AGENTS.md
tools/: check-deployment-env.mjs  check-deployment-env.test.mjs  check-doc-links.mjs  check-doc-refs.mjs  check-gallery-local-config.mjs  check-gallery-local-config.test.mjs  check-preview-route-config.mjs  dev.mjs  local-stack.mjs  local-stack.test.mjs  run-api-tests.mjs  run-api-tests.test.mjs  run-smtp-check.mjs  run-smtp-check.test.mjs
web/: AGENTS.md  Dockerfile  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
worker/: AGENTS.md  Cargo.toml  Dockerfile
worker/src/: archive_validation.rs  config.rs  content_fingerprint.rs  format_rules.rs  gallery_copy_job.rs  gallery_cover_job.rs  gallery_job_contract.rs  gallery_safety.rs  gallery_safety_job.rs  health.rs  job_store.rs  lib.rs  logging.rs  main.rs  manifest.rs  object_storage.rs  processing.rs  retry_policy.rs  runtime.rs  thumbnail.rs  validation_report.rs
worker/tests/: archive_validation.rs  format_rules.rs  gallery_copy.rs  gallery_job_contract.rs  gallery_safety.rs  job_store.rs  logging.rs  manifest.rs  object_storage.rs  processing.rs  retry_policy.rs  thumbnail.rs
(+487 files in other folders)
