[package]
name = "shareslices-worker"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
publish = false

# cspell:ignore rustls serde sqlx thiserror
[dependencies]
async-trait = "0.1"
aws-sdk-s3 = "1.137.0"
futures-util = "0.3"
hmac = "0.12"
headless_chrome = "1.0.21"
http-body = "1"
http-body-util = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
quick-xml = "0.39.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "time"] }
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
